--- a/menu.css
+++ b/menu.css
@@ -15,6 +15,7 @@ body {
 
 nav {
   background-color: #77e4e0;
+  box-shadow: 0px 3px 4px #ccc;
   overflow: auto;
   opacity: 1;
   padding: 10px 0;
@@ -68,7 +69,7 @@ nav ul li {
 }
 
 .wrapper .sections .menu-img {
-    background-image: url(about-bckgrnd-edit.jpg);
+    background-image: url(images/menu-banner-edit.jpg);
     height: 100%;
     float: left;
     width: 60%;
