--- a/css/styles.css
+++ b/css/styles.css
@@ -78,8 +78,6 @@ nav ul li {
 
 .wrapper .rest-info p {
   margin: 0;
-
-  /* font-family: 'Dancing Script', cursive; */
   font-family: 'Amatic SC', cursive;
   font-weight: bolder;
   font-size: 50px;
@@ -93,4 +91,8 @@ nav ul li {
 .wrapper .rest-dine {
   width: 100px;
   height: 50px;
+}
+
+.wrapper .link:hover {
+  cursor: pointer;
 }
