--- a/css/contact.css
+++ b/css/contact.css
@@ -79,6 +79,7 @@ nav ul li {
   float: right;
   width: 40%;
   overflow-y: auto;
+  background-color: #F4F5F5;
 }
 
 .wrapper .sections .contact-banner .title {
