linted the code

--- a/css/menu.css
+++ b/css/menu.css
@@ -34,7 +34,7 @@ body {
   float: right;
   width: 40%;
   overflow-y: auto;
-  background-color: #F4F5F5;
+  background-color: #f4f5f5;
 }
 
 .wrapper .sections .menu-banner .title {
