--- a/css/contact.css
+++ b/css/contact.css
@@ -31,7 +31,7 @@ html {
   float: right;
   width: 40%;
   overflow-y: auto;
-  background-color: #F4F5F5;
+  background-color: #f4f5f5;
 }
 
 .wrapper .sections .contact-banner .title {
