--- a/css/menu.css
+++ b/css/menu.css
@@ -9,17 +9,17 @@ body {
   overflow: hidden;
 }
 
-.wrapper {
+.content {
   height: 100%;
 }
 
 /* menu banner stuff here */
 
-.wrapper .sections {
+.content .sections {
   height: 100%;
 }
 
-.wrapper .sections .menu-img {
+.content .sections .menu-img {
   background-image: url(../images/menu-banner-edit.jpg);
   height: 100%;
   float: left;
@@ -28,7 +28,7 @@ body {
   /* overflow-y: auto; */
 }
 
-.wrapper .sections .menu-sect {
+.content .sections .menu-sect {
   margin: 0;
   height: 100%;
   float: right;
@@ -37,7 +37,7 @@ body {
   background-color: #f4f5f5;
 }
 
-.wrapper .sections .menu-banner .title {
+.content .sections .menu-banner .title {
   font-family: 'Pacifico', cursive;
   font-size: 110px;
   text-align: center;
@@ -45,14 +45,14 @@ body {
   margin: 60px 0 0 0;
 }
 
-.wrapper .sections .menu-banner hr {
+.content .sections .menu-banner hr {
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
   width: 65%;
 }
 
-.wrapper .sections .menu-banner .about-deets {
+.content .sections .menu-banner .about-deets {
   text-align: center;
   margin: 0 auto;
   width: 50%;
